--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was Created by Ivan 31D. It uses data from mapbox.com and weatherstack api!</p>
         <img src="/img/robot.png" class="portrait" alt="">
     </div>
     {{>footer}}
